2001-12-08 Pascal Georges <pascal.georges1@free.fr>
        * changed board_finished() to take a parameter (see bonus.h), making use of tuxplane.png and tuxloco.png				

2001-12-07 Pascal Georges <pascal.georges1@free.fr>
        * fixed some bugs in railroad, imageid, click_on_letter and missingletter boards
        * fixed railroad board to fit new fullscreen layout

2001-12-07  Bruno Coudoin  <bruno.coudoin@free.fr>
	* src/gcompris/gcompris.c: implemented fullscreen
	* po/es.po: updated by Robinson Rodrigo Maureira Castillo
	* po/de.po: updated by Herman Herweg
	* boards/boardsicon/locale_[de en sv].png: created or updated by Herman

2001-12-03  Bruno Coudoin  <bruno.coudoin@free.fr>
        * src/boards/paratrooper.c: boat is back

2001-12-02  Bruno Coudoin  <bruno.coudoin@free.fr>
        * src/gcompris/score.c: creation of the gcompris_score API to replace gcompris_point API
        * src/gcompris/point.[ch]: removed
        * src/boards/*.c: changed the pause algo to fullfill the boardfinish needs

2001-12-02  Bruno Coudoin  <bruno.coudoin@free.fr>
        * src/boards/clockgame.c: modified to use board_finished(). Fixed max timer.
                                  modified to use gcompris_point API
        * src/board/algebra.c: modified to use gcompris_point API
        * src/board/wordsgame.c: modified to use gcompris_point API
        * src/boards/*.c: modified to use board_finished().
        * boards/paintings/board6_1.xml: deleted, was incomplete.
        * src/gcompris/bonus.h: removed entry gcompris_bar_set_message()
        * src/gcompris/point.c: creation of the gcompris_point API to replace gcompris_bar_timer

2001-12-01 Pascal Georges <pascal.georges1@free.fr>
        * added board_finished() function in bonus.c, called when a sequential board is done
        It displays tux in a plane flying toward a door (!)
        * corrected the XML accent bug, that still remained in missingletter (but I had already corrected in imageid)
