@@ -1,6 +1,6 @@
 /* gcompris - properties.h
  *
- * Time-stamp: <2001/05/08 20:06:30 bruno>
+ * Time-stamp: <2001/12/09 00:24:42 bruno>
  *
  * Copyright (C) 2000 Bruno Coudoin
  *
@@ -25,6 +25,7 @@
 typedef struct {
   gint		music;
   gint		fx;
+  gint		fullscreen;
 } GcomprisProperties;
 
 GcomprisProperties	*gcompris_get_properties ();
