@@ -1,3 +1,6 @@
+2001-12-09  Bruno Coudoin  <bruno.coudoin@free.fr>
+	* src/gcompris/gcompris.c: implemented command line parameter -window and -mute
+
 2001-12-08 Pascal Georges <pascal.georges1@free.fr>
         * changed board_finished() to take a parameter (see bonus.h), making use of tuxplane.png and tuxloco.png				
 
